// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`separateByNotEmpty '' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`separateByNotEmpty 'this' conditional success tests AST matches snapshot 1`] = `
[
  "this",
]
`;

exports[`separateByNotEmpty 'this,this' conditional success tests AST matches snapshot 1`] = `
[
  "this",
  "this",
]
`;

exports[`separateByNotEmpty 'this,this,this' conditional success tests AST matches snapshot 1`] = `
[
  "this",
  "this",
  "this",
]
`;

exports[`separateByNotEmpty 'this, this' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": {
    "column": 6,
    "index": 5,
    "line": 1,
  },
}
`;

exports[`separateByNotEmpty 'foo' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;
